--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,12 +13,21 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let song of songs | async" (click)="showOptions(song.$key, song.title, song.artist)">
-      Song Title : {{song.title}}
-      <br />
-     Artist :  {{song.artist}}
-      <ion-icon name = "arrow-forward" item-right></ion-icon>
-    </ion-item>
-  </ion-list>
+    <ion-list>
+      <ion-item *ngFor="let song of songs | async" (click)="showOptions(song.$key, song.title, song.artist)">
+        {{song.title}}
+        <br /> {{song.artist}}
+        <ion-icon name="arrow-forward" item-right></ion-icon>
+      </ion-item>
+    </ion-list>
+
+  <ion-fab right bottom>
+    <button ion-fab color="red"><ion-icon name="add"></ion-icon></button>
+    <ion-fab-list side="left">
+      <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
